--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "lint": "eslint",
+    "shadcn": "bin/shadcn",
     "start:test-app": "cd test/app && npm run test-app",
     "build:types": "vue-tsc --noEmit false",
     "build": "vite build && npm run build:types",
@@ -46,6 +47,11 @@
     "vue-tsc": "^3.2.4"
   },
   "dependencies": {
+    "@vueuse/core": "^14.2.1",
+    "reka-ui": "^2.8.0",
+    "shadcn": "^3.8.4",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "vue": "^3.5.28"
   }
 }
