--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:types": "vue-tsc --noEmit false",
     "build": "vite build && npm run build:types",
     "test:app": "npm run build && cd test/app && npm i && npm run test-app",
-    "prepare": "npm run build"
+    "prepublish": "npm run build"
   },
   "files": [
     "dist/"
@@ -48,10 +48,15 @@
   },
   "dependencies": {
     "@vueuse/core": "^14.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.563.0",
     "reka-ui": "^2.8.0",
     "shadcn": "^3.8.4",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "vue": "^3.5.28"
+    "vue": "^3.5.28",
+    "vue-phone-input-base": "^1.0.0"
   }
 }
